tests/src/frontend/typechecking/invalid/late_static4.sk
base class Foo {
  static fun abs(): void;
  deferred static fun bad(): void {
    static::abs()
  }
}

fun main(): void {
  Foo::abs();
  print_raw("Fail")
}
